fixed overlapping columns with truncation and tooltip

--- a/experiments/adj-matrix/css/styles.css
+++ b/experiments/adj-matrix/css/styles.css
@@ -58,7 +58,8 @@ fill: #eee;
 div.tooltip {
 position: absolute;
 text-align: center;
-width: 40px;
+font-size:11px;
+width: 80px;
 border-radius: 5px;
 padding: 2px;
 background: white;
